--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "materialize-css": "^1.0.0-rc.2",
     "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-datepicker": "^4.21.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router": "^5.2.1",
-    "react-router-dom": "^5.3.0",
+    "react-router-dom": "^5.3.4",
     "react-scripts": "4.0.3",
     "react-toastify": "^8.1.0",
     "sweetalert": "^2.1.2",
